# pymmseqs

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  input.fasta  pyproject.toml  setup.py  setup_utils.py  test.py
.github/workflows/: build_publish.yaml  docker-publish.yaml  pypi-publish.yaml  python-package.yaml  test-publish.yaml  test.yaml  test_publish.yaml
docs/: commands.md  config.md  parsers.md
examples/cluster/: cluster_ex.py  input.fasta
examples/commands_module/createdb_and_search/: search_ex.ipynb
examples/commands_module/easy_cluster/: easy_cluster_ex.ipynb  rat.fasta
examples/commands_module/easy_search/: easy_search_ex.ipynb  rat.fasta
examples/configs_module/align/: align_ex.py  query.fasta
examples/configs_module/cluster/: cluster_ex.py
examples/configs_module/createdb/: config.yaml  createdb_ex.py
examples/configs_module/createtaxdb/: createtaxdb.py  input.fasta
examples/configs_module/easy_cluster/: easy_cluster_ex.py
examples/configs_module/easy_taxonomy/: easy_taxonomy_ex.py  query.fasta  target.fasta
examples/configs_module/search/: target.fasta
examples/createdb/: config.yaml  createdb_ex.py
examples/createtaxdb/: createtaxdb.py
examples/easy_cluster/: easy_cluster_ex.py
examples/easy_linclust/: easy_linclust_ex.py  input.fasta
examples/easy_linsearch/: easy_linsearch_ex.py  query.fasta  target.fasta
examples/easy_search/: easy_search_ex.py
examples/easy_taxonomy/: easy_taxonomy_ex.py
examples/search/: .gitignore  search_ex.py
pymmseqs/: __init__.py  wrapper.py
pymmseqs/commands/: __init__.py  cluster.py  createdb.py  createtaxdb.py  easy_cluster.py  easy_linclust.py  easy_linsearch.py  easy_search.py  easy_taxonomy.py  search.py
pymmseqs/config/: __init__.py  base.py  createdb_config.py  createtaxdb_config.py  easy_cluster_config.py  easy_linclust_config.py  easy_linsearch_config.py  easy_search_config.py  search_config.py
pymmseqs/defaults/: createdb.yaml  easy_cluster.yaml
pymmseqs/parsers/: __init__.py  createdb_parser.py  easy_cluster_parser.py  easy_search_parser.py  search_parser.py
pymmseqs/tools/: __init__.py  evalue_histogram.py
pymmseqs/utils/: __init__.py  binary.py  runner.py  utils.py
pymseqs/: __init__.py  runner.py  wrapper.py
pymseqs/commands/: __init__.py  cluster.py  createdb.py  createtaxdb.py  easy_cluster.py  easy_linclust.py  easy_linsearch.py  easy_search.py  easy_taxonomy.py  search.py
pymseqs/config/: __init__.py  base.py  createdb_config.py
pymseqs/defaults/: createdb.yaml
pymseqs/utils/: __init__.py  utils.py
scripts/: download_mmseqs.sh
tests/: test_commands.py
