# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymmseqs"
version = "0.0.7"
description = "Python wrapper for mmseqs2"
readme = "README.md"
authors = [
    { name = "heispv", email = "peymanvahidi1998@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml>=3.11",
]

[project.urls]
Homepage = "https://github.com/heispv/pymmseqs"
Documentation = "https://github.com/heispv/pymmseqs/docs"
"Bug Tracker" = "https://github.com/heispv/pymmseqs/issues"

[tool.setuptools]
# Include files specified in package_data
include-package-data = true

[tool.setuptools.package-data]
# Include all files in pymmseqs/bin/
"pymmseqs" = ["bin/*"]
"pymmseqs.defaults" = ["*.yaml"]
