# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.40", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pymmseqs"
version = "0.0.17"
description = "Python wrapper for mmseqs2"
readme = "README.md"
authors = [
    { name = "heispv", email = "peymanvahidi1998@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
    "pyyaml>=3.11",
]

[project.urls]
Homepage = "https://github.com/heispv/pymmseqs"
Documentation = "https://github.com/heispv/pymmseqs/docs"
"Bug Tracker" = "https://github.com/heispv/pymmseqs/issues"

[tool.setuptools]
# Include files specified in package_data
include-package-data = true

[tool.setuptools.package-data]
# Include all files in pymmseqs/bin/
"pymmseqs" = ["bin/*"]
"pymmseqs.defaults" = ["*.yaml"]

[tool.bdist_wheel]
# Platform tags for the wheels
platforms = [
    "manylinux_2_17_x86_64",
    "macosx_11_0_arm64",
]
