# pyproject.toml

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pymmseqs"
version = "0.0.21"
description = "Python wrapper for mmseqs2"
readme = "README.md"
authors = [
    { name = "heispv", email = "peyman.vahidi@tum.de" }
]
license = {text = "MIT License"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: >=3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/heispv/pymmseqs"
Documentation = "https://github.com/heispv/pymmseqs/docs"
"Bug Tracker" = "https://github.com/heispv/pymmseqs/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pymmseqs" = ["bin/*"]
"pymmseqs.defaults" = ["*.yaml"]

[tool.cibuildwheel]
skip = "cp27-* pp27-* pp3*-*"
